@@ -1,3 +1,4 @@
+5/8/13 Made tab name white instead of black against a white background
 4/24/13 Moved home screen, tab navigation bar, about dialog, popup menu into their own divs/Scenes.  See docs in HomeScreenScene for tradeoffs.
 4/23/13 rename PlayArea -> TabView, per developer meeting
 4/22/13 implemented background-color switching for Tabs
